--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -5,9 +5,15 @@
     <head>
         <meta charset="utf-8">
         <title>Projeto</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'materialize/dist/css/materialize.min.css' %}">
     </head>
     <body>
-        <div id="app"></div>
+        <header></header>
+        <main>   
+            <div id="app"></div>
+        </main>
         {% render_bundle 'main' %}
+        <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
     </body>
 </html>
