--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -4,14 +4,14 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <title>Projeto</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="{% static 'materialize/dist/css/materialize.min.css' %}">
     </head>
     <body>
-        <header></header>
-        <main>   
-            <div id="app"></div>
-        </main>
+        <div id="app"></div>
         {% render_bundle 'main' %}
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
