--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" type="text/css" href="{% static 'materialize/dist/css/materialize.min.css' %}">
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+        </div>
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
         {% render_bundle 'main' %}
