--- a/templates/donations/home.html
+++ b/templates/donations/home.html
@@ -15,6 +15,6 @@
         <div id="app"></div>
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
-        {% render_bundle 'main' %}
+        {% render_bundle 'app' %}
     </body>
 </html>
