--- a/templates/core/app.html
+++ b/templates/core/app.html
@@ -12,9 +12,9 @@
         <link rel="stylesheet" type="text/css" href="{% static 'materialize/dist/css/materialize.min.css' %}">
     </head>
     <body>
-        <div id="main"></div>
+        <div id="app"></div>
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
-        {% render_bundle 'main' %}
+        {% render_bundle 'app' %}
     </body>
 </html>
