--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -16,6 +16,6 @@
         </div>
         <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
-        {% render_bundle 'main' %}
+        {% render_bundle 'app' %}
     </body>
 </html>
