--- a/templates/donations/home.html
+++ b/templates/donations/home.html
@@ -8,8 +8,7 @@
         <title>Projeto</title>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{% static 'materialize/dist/css/materialize.min.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />s
     </head>
     <body>
         <div id="home"></div>
