FIX Template E-Mail
Signed-off-by: Ayron Felipe Carvalho Araujo <ayron41@gmail.com>

--- a/templates/emails/activate_email.html
+++ b/templates/emails/activate_email.html
@@ -237,40 +237,41 @@
                                                 </a>
                                                 <br>
                                                 <div>
-                                                    <p style="padding: 0 0 10px 0;">Se você recebeu esse email por engano, simplesmente delete-o. Sua conta não será ativada se se você não clicar no botão de confirmação acima.</p>
+                                                    <p style="padding: 0 0 10px 0;">Se você recebeu esse email por engano, simplesmente delete-o. Sua conta não será ativada se você não clicar no botão de confirmação acima.</p>
                                                     <p style="padding: 0 0 10px 0;">Se você está tendo problemas com o botão acima, copie e cole a URL dada no seu browser.</p>
                                                 </div>
                                                 <span itemscope itemtype="http://schema.org/EmailMessage">
                                                     <span itemprop="description" content="We need to confirm your email address."></span>
                                                     <span itemprop="action" itemscope itemtype="http://schema.org/ConfirmAction">
-                                                        <meta itemprop="name" content="Confirm Subscription"> <span itemprop="handler" itemscope itemtype="http://schema.org/HttpActionHandler">
-                                                        <meta itemprop="url" content="https://foundermantras.us7.list-manage.com/subscribe/smartmail-confirm?u=1b74d38c8380f562118a12b0b&id=8fde0ceecc&e=d060b89991&inline=true">
-                                                        <link itemprop="method" href="http://schema.org/HttpRequestMethod/POST">
+                                                        <meta itemprop="name" content="Confirm Subscription"> 
+                                                        <span itemprop="handler" itemscope itemtype="http://schema.org/HttpActionHandler">
+                                                            <meta itemprop="url" content="https://foundermantras.us7.list-manage.com/subscribe/smartmail-confirm?u=1b74d38c8380f562118a12b0b&id=8fde0ceecc&e=d060b89991&inline=true">
+                                                            <link itemprop="method" href="http://schema.org/HttpRequestMethod/POST">
+                                                        </span>
                                                     </span>
                                                 </span>
-                          </span>
                                             </td>
                                         </tr>
                                     </table>
                                     <!-- END BODY \\ -->
                                 </td>
                             </tr>
-              <tr>
-                <td align="center" valign="top">
-                  <!-- // BEGIN FOOTER -->
-                  <table border="0" cellpadding="20" cellspacing="0" width="600">
-                    <tr>
-                      <td align="center" valign="top"></td>
-                    </tr>
-                  </table>
-                  <!-- END FOOTER \\ -->
-                </td>
-              </tr>
+                            <tr>
+                                <td align="center" valign="top">
+                                    <!-- // BEGIN FOOTER -->
+                                    <table border="0" cellpadding="20" cellspacing="0" width="600">
+                                        <tr>
+                                            <td align="center" valign="top"></td>
+                                        </tr>
+                                    </table>
+                                    <!-- END FOOTER \\ -->
+                                </td>
+                            </tr>
+                        </table>
+                        <!-- END CONTAINER \\ -->
+                    </td>
+                </tr>
             </table>
-            <!-- END CONTAINER \\ -->
-          </td>
-        </tr>
-      </table>
-    </center>
-  </body>
+        </center>
+    </body>
 </html>
