--- a/templates/emails/notification_solicitation_email.html
+++ b/templates/emails/notification_solicitation_email.html
@@ -118,7 +118,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" class="rounded6" style="border-radius: 6px;background-color: #512da8;">
                                         <tr>
                                             <td align="left" valign="top" class="bodyContent" style="line-height: 150%;font-family: Helvetica;font-size: 14px;color: #ffffff;padding: 20px;">
-                                                <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Confirmação de endereço de e-mail</h2>
+                                                <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Sua doação foi solicitada</h2>
                                                 <br>
                                                 <div>
                                                     <p style="padding: 0 0 10px 0;">
@@ -126,7 +126,7 @@
                                                     </p>
                                                     <p style="padding: 0 0 10px 0;">
                                                         Sua doação <a href="{{ protocol }}://{{ domain }}{% url 'donations:donation_detail' donation.slug %}">{{ donation }}</a> foi solicitada pelo usuário <a href="{{ protocol }}://{{ domain }}{% url 'accounts:profile' solicitation.owner.id %}">{{ solicitation.owner }}</a>.<br/>
-                                                        Você pode aceitar ou rejeitar a solicitação, observe o perfil do {{ solicitation.owner }} pondere e faça como desejar. Não se sinta obrigado a aceitar essa solicitação. Nossa equipe está ao seu lado.
+                                                        Você pode aceitar ou rejeitar a solicitação, observe o perfil do {{ solicitation.owner }}, pondere e faça como desejar. Não se sinta obrigado a aceitar essa solicitação. Nossa equipe está do seu lado.
                                                         Clique no botão abaixo para ser redirecionado para sua página de gerenciamento de doações.
                                                     </p>
                                                 </div>
