--- a/templates/emails/notification_rejection_solicitation_email.htm
+++ b/templates/emails/notification_rejection_solicitation_email.htm
@@ -1,4 +1,3 @@
-
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr">  
     <head>
         <title>Projeto</title>
@@ -125,12 +124,13 @@
                                                         Olá, {{ user }}.
                                                     </p>
                                                     <p style="padding: 0 0 10px 0;">
-                                                        Sua doação <a href="{{ protocol }}://{{ domain }}{% url 'donations:donation_detail' donation.slug %}">{{ donation }}</a> foi solicitada pelo usuário <a href="{{ protocol }}://{{ domain }}{% url 'accounts:profile' solicitation.owner.id %}">{{ solicitation.owner }}</a>.<br/>
-                                                        Você pode aceitar ou rejeitar a solicitação, observe o perfil do {{ solicitation.owner }}, pondere e faça como desejar. Não se sinta obrigado a aceitar essa solicitação. Nossa equipe está do seu lado.
-                                                        Clique no botão abaixo para ser redirecionado para sua página de gerenciamento de doações.
+                                                        Sua solicitação <a href="{{ protocol }}://{{ domain }}{% url 'donations:solicitation_detail' solicitation.slug %}">{{ solicitation }}</a> foi rejeitada pelo usuário <a href="{{ protocol }}://{{ domain }}{% url 'accounts:profile' donation.donator.pk %}">{{ donation.donator }}</a>.<br/>
+                                                        Pelo motivo: <br/>
+                                                        <strong>{{ solicitation.reason_rejection }}</strong><br/>
+                                                        Clique no botão abaixo para ser redirecionado para sua página de gerenciamento de solicitações.
                                                     </p>
                                                 </div>
-                                                <a class="button" href="{{ protocol }}://{{ domain }}{% url 'donations:my_donations' %}" style="color: #512da8 !important;display: inline-block;font-weight: 500;font-size: 16px;line-height: 42px;font-family: 'Helvetica', Arial, sans-serif;width: auto;white-space: nowrap;height: 42px;margin: 12px 5px 12px 0;padding: 0 22px;text-decoration: none;text-align: center;cursor: pointer;border: 0;border-radius: 3px;vertical-align: top;background-color: #ffffff !important;" target="_blank">
+                                                <a class="button" href="{{ protocol }}://{{ domain }}{% url 'donations:my_solicitations' %}" style="color: #512da8 !important;display: inline-block;font-weight: 500;font-size: 16px;line-height: 42px;font-family: 'Helvetica', Arial, sans-serif;width: auto;white-space: nowrap;height: 42px;margin: 12px 5px 12px 0;padding: 0 22px;text-decoration: none;text-align: center;cursor: pointer;border: 0;border-radius: 3px;vertical-align: top;background-color: #ffffff !important;" target="_blank">
                                                     <span style="display: inline;font-family: 'Helvetica', Arial, sans-serif;text-decoration: none;font-weight: 500;font-style: normal;font-size: 16px;line-height: 42px;cursor: pointer;border: none;background-color: #ffffff !important;color: #512da8 !important;">
                                                         Clique aqui!
                                                     </span>
@@ -142,10 +142,10 @@
                                                 </div>
                                             </td>
                                         </tr>
-                                    </table>                                    
+                                    </table>
                                 </td>
                             </tr>
-                        </table>                        
+                        </table>
                     </td>
                 </tr>
             </table>
