--- a/templates/accounts/account_activation_success.html
+++ b/templates/accounts/account_activation_success.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
     </head>
     <body class="deep-purple darken-2 white-text">
         <main>
