Finalizada parte externa
Signed-off-by: Ayron Felipe <ayron41@gmail.com>

--- a/templates/emails/notification_rejection_solicitation_email.html
+++ b/templates/emails/notification_rejection_solicitation_email.html
@@ -70,7 +70,7 @@
                 left:auto;
             }
             body,#bodyTable{
-                background-color:#512da8;
+                background-color:#1572e8;
             }
             h1{
                 font-size:28px;
@@ -80,10 +80,10 @@
                 padding:0;
             }
             #templateContainer{
-                background-color:#512da8;
+                background-color:#1572e8;
             }
             #templateBody{
-                background-color:#512da8;
+                background-color:#1572e8;
             }
             .bodyContent{
                 line-height:150%;
@@ -97,7 +97,7 @@
             }
             .button:link,.button:active,.button:visited,.button,.button span{
                 background-color:#ffffff !important;
-                color:#512da8 !important;
+                color:#1572e8 !important;
             }
             .button:hover{
                 background-color:#000000 !important;
@@ -106,15 +106,15 @@
         </style>
     </head>
   
-    <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="font: 14px/20px 'Helvetica', Arial, sans-serif;margin: 0;padding: 75px 0 0 0;text-align: center;-webkit-text-size-adjust: none;background-color: #512da8;">
+    <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="font: 14px/20px 'Helvetica', Arial, sans-serif;margin: 0;padding: 75px 0 0 0;text-align: center;-webkit-text-size-adjust: none;background-color: #1572e8;">
         <center>
-            <table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color: #512da8;">
+            <table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color: #1572e8;">
                 <tr>
                     <td align="center" valign="top">
-                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer" class="rounded6" style="border-radius: 6px;background-color: #512da8;">
+                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer" class="rounded6" style="border-radius: 6px;background-color: #1572e8;">
                             <tr>
                                 <td align="center" valign="top">
-                                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" class="rounded6" style="border-radius: 6px;background-color: #512da8;">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" class="rounded6" style="border-radius: 6px;background-color: #1572e8;">
                                         <tr>
                                             <td align="left" valign="top" class="bodyContent" style="line-height: 150%;font-family: Helvetica;font-size: 14px;color: #ffffff;padding: 20px;">
                                                 <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Sua doação foi solicitada</h2>
@@ -130,8 +130,8 @@
                                                         Clique no botão abaixo para ser redirecionado para sua página de gerenciamento de solicitações.
                                                     </p>
                                                 </div>
-                                                <a class="button" href="{{ protocol }}://{{ domain }}{% url 'donations:my_solicitations' %}" style="color: #512da8 !important;display: inline-block;font-weight: 500;font-size: 16px;line-height: 42px;font-family: 'Helvetica', Arial, sans-serif;width: auto;white-space: nowrap;height: 42px;margin: 12px 5px 12px 0;padding: 0 22px;text-decoration: none;text-align: center;cursor: pointer;border: 0;border-radius: 3px;vertical-align: top;background-color: #ffffff !important;" target="_blank">
-                                                    <span style="display: inline;font-family: 'Helvetica', Arial, sans-serif;text-decoration: none;font-weight: 500;font-style: normal;font-size: 16px;line-height: 42px;cursor: pointer;border: none;background-color: #ffffff !important;color: #512da8 !important;">
+                                                <a class="button" href="{{ protocol }}://{{ domain }}{% url 'donations:my_solicitations' %}" style="color: #1572e8 !important;display: inline-block;font-weight: 500;font-size: 16px;line-height: 42px;font-family: 'Helvetica', Arial, sans-serif;width: auto;white-space: nowrap;height: 42px;margin: 12px 5px 12px 0;padding: 0 22px;text-decoration: none;text-align: center;cursor: pointer;border: 0;border-radius: 3px;vertical-align: top;background-color: #ffffff !important;" target="_blank">
+                                                    <span style="display: inline;font-family: 'Helvetica', Arial, sans-serif;text-decoration: none;font-weight: 500;font-style: normal;font-size: 16px;line-height: 42px;cursor: pointer;border: none;background-color: #ffffff !important;color: #1572e8 !important;">
                                                         Clique aqui!
                                                     </span>
                                                 </a>
