--- a/templates/accounts/account_activation_success.html
+++ b/templates/accounts/account_activation_success.html
@@ -1,41 +1,45 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-        <title>Projeto</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-    </head>
-    <body class="deep-purple darken-2 white-text">
-        <main>
-            <div class="row">
-                <div class="col s12 center-align">
-                    <div class="valign-wrapper row">
-                        <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4 deep-purple white-text">
-                            <form id="login-form">
-                                <div class="card-content">
-                                    <div class="white-text center-align card-title">
-                                        <h3>Acesso Permitido</h3>
-                                    </div>
-                                </div>
-                                <p>
-                                    Seu usuário foi ativado com sucesso. Agora, você pode logar e começar a ajudar. Clique no botão abaixo para ser redirecionado para a página de login.
-                                </p>
-                                <div class="card-action right-align">
-                                    <a href="/accounts/login" class="btn waves-effect waves-light indigo accent-2 white-text">Clique aqui!</a>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    </body>
+<html lang="en">
+
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Projeto</title>
+    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+    <link rel="icon" href="https://via.placeholder.com/32x32" type="image/x-icon" />
+
+    <!-- Fonts and icons -->
+    <script src="{% static 'template/js/plugin/webfont/webfont.min.js' %}"></script>
+    <script>
+        WebFont.load({
+            google: { "families": ["Lato:300,400,700,900"] },
+            custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['../assets/css/fonts.min.css'] },
+            active: function () {
+                sessionStorage.fonts = true;
+            }
+        });
+    </script>
+
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="{% static 'template/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'template/css/atlantis.min.css' %}">
+</head>
+
+<body class="page-not-found bg-primary">
+    <div class="wrapper not-found">
+        <h1 class="animated fadeIn">Olá</h1>
+        <div class="desc animated fadeIn"><span>Muito obrigado por ativar seu usuário no Alimentaí</span><br />Clique no botão abaixo para ser redirecionado para a página de login</div>
+        <a href="{% url 'accounts:accounts_login' %}" class="btn btn-info btn-back-home mt-4 animated fadeInUp">
+            <span class="btn-label mr-2">
+                <i className="icon-login"></i>
+            </span>
+            Login
+        </a>
+    </div>
+    <script src="{% static 'template/js/core/jquery.3.2.1.min.js' %}"></script>
+    <script src="{% static 'template/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'template/js/core/popper.min.js' %}"></script>
+    <script src="{% static 'template/js/core/bootstrap.min.js' %}"></script>
+</body>
+
 </html>
