--- a/templates/emails/activate_email.html
+++ b/templates/emails/activate_email.html
@@ -71,7 +71,7 @@
       			left:auto;
       		}
       		body,#bodyTable{
-      			background-color:#512da8;
+      			background-color:#1572e8;
       		}
       		h1{
       			font-size:28px;
@@ -81,10 +81,10 @@
       			padding:0;
       		}
       		#templateContainer{
-      			background-color:#512da8;
+      			background-color:#1572e8;
       		}
       		#templateBody{
-      			background-color:#512da8;
+      			background-color:#1572e8;
       		}
       		.bodyContent{
       			line-height:150%;
@@ -107,15 +107,15 @@
         </style>
     </head>
   
-    <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="font: 14px/20px 'Helvetica', Arial, sans-serif;margin: 0;padding: 75px 0 0 0;text-align: center;-webkit-text-size-adjust: none;background-color: #512da8;">
+    <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="font: 14px/20px 'Helvetica', Arial, sans-serif;margin: 0;padding: 75px 0 0 0;text-align: center;-webkit-text-size-adjust: none;background-color: #1572e8;">
         <center>
-            <table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color: #512da8;">
+            <table border="0" cellpadding="20" cellspacing="0" height="100%" width="100%" id="bodyTable" style="background-color: #1572e8;">
                 <tr>
                     <td align="center" valign="top">                        
-                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer" class="rounded6" style="border-radius: 6px;background-color: #512da8;">
+                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer" class="rounded6" style="border-radius: 6px;background-color: #1572e8;">
                             <tr>
                                 <td align="center" valign="top">                                    
-                                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" class="rounded6" style="border-radius: 6px;background-color: #512da8;">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody" class="rounded6" style="border-radius: 6px;background-color: #1572e8;">
                                         <tr>
                                             <td align="left" valign="top" class="bodyContent" style="line-height: 150%;font-family: Helvetica;font-size: 14px;color: #ffffff;padding: 20px;">
                                                 <h2 style="font-size: 22px;line-height: 28px;margin: 0 0 12px 0;">Confirmação de endereço de e-mail</h2>
